# MLF_coinDetector

./: .gitignore  README.md  WAFFLE_RUNBOOK.md  app.yaml
assets/: app.js  index.html  style.css
assets/fonts/: fonts.css
assets/libs/: arduino.js
python/: main.py  requirements.txt
ros2/: README.md
ros2/mlf_coin_teleop/: package.xml  setup.cfg  setup.py
ros2/mlf_coin_teleop/launch/: teleop.launch.py
ros2/mlf_coin_teleop/mlf_coin_teleop/: joystick_teleop_node.py
sketch/: sketch.ino  sketch.yaml
