<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mlf_coin_teleop</name>
  <version>0.1.0</version>
  <description>Téléop TurtleBot3 : le palet détecté agit comme un joystick (UDP -&gt; /cmd_vel).</description>
  <maintainer email="mehdi.karim43@gmail.com">medkar</maintainer>
  <license>MPL-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
